[package]
name = "imagegrid"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
glob = "0.3.3"
image = "0.25.9"
oklab = "1.1.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
